--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       <p class="section-lead">Selecciona una tarea para ver el reporte completo.</p>
 
       <div class="grid">
+        <!-- Generadas 8 tarjetas -->
         <!-- T1 -->
         <article class="card">
           <div class="card-media">
@@ -90,13 +91,9 @@
           <div class="card-body">
             <h3 class="card-title">Tarea 1 — Título de la actividad</h3>
             <p class="card-desc">Resumen breve (2–3 líneas) de lo que hiciste y el resultado.</p>
-            <div class="card-meta">
-              <span>📌 Entregable:</span><span>Reporte + evidencia</span>
-            </div>
+            <div class="card-meta"><span>📌 Entregable:</span><span>Reporte + evidencia</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-01.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-01.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T2 -->
@@ -110,9 +107,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>🧰 Materiales:</span><span>lista corta</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-02.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-02.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T3 -->
@@ -126,9 +121,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>🎥 Video:</span><span>demo</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-03.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-03.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T4 -->
@@ -142,9 +135,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>📎</span><span>evidencias</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-04.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-04.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T5 -->
@@ -158,9 +149,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>🧪</span><span>pruebas</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-05.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-05.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T6 -->
@@ -174,9 +163,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>📐</span><span>diseño</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-06.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-06.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T7 -->
@@ -190,9 +177,7 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>🔧</span><span>implementación</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-07.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-07.html">Abrir tarea →</a></div>
         </article>
 
         <!-- T8 -->
@@ -206,14 +191,11 @@
             <p class="card-desc">Resumen breve del objetivo, proceso y resultado.</p>
             <div class="card-meta"><span>✅</span><span>cierre</span></div>
           </div>
-          <div class="card-footer">
-            <a href="tareas/tarea-08.html">Abrir tarea →</a>
-          </div>
+          <div class="card-footer"><a href="tareas/tarea-08.html">Abrir tarea →</a></div>
         </article>
       </div>
     </section>
 
-    <!-- SOBRE -->
     <section id="sobre" class="section" aria-label="Sobre el portafolio">
       <h2>Sobre este portafolio</h2>
       <p class="section-lead">
@@ -221,7 +203,6 @@
       </p>
     </section>
 
-    <!-- CONTACTO -->
     <section id="contacto" class="section" aria-label="Contacto">
       <h2>Contacto</h2>
       <p class="section-lead">
