--- a/tareas/tarea-05.html
+++ b/tareas/tarea-05.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tarea 1 | Pensamiento de Ingeniería</title>
-  <meta name="description" content="Reporte de la Tarea 1 de Pensamiento de Ingeniería." />
+  <title>Tarea 5 | Pensamiento de Ingeniería</title>
+  <meta name="description" content="Reporte de la Tarea 5 de Pensamiento de Ingeniería." />
   <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
@@ -22,17 +22,17 @@
       </div>
 
       <nav class="nav" aria-label="Navegación">
-        <a href="../index.html#tareas">← Regresar</a>
+        <a href="tarea-04.html">← Anterior</a>
         <a href="../index.html">Inicio</a>
-        <a href="tarea-02.html">Siguiente →</a>
+        <a href="tarea-06.html">Siguiente →</a>
       </nav>
     </div>
   </header>
 
   <main id="contenido" class="container">
     <section class="section">
-      <h1 class="page-title">Tarea 1 — Título de la actividad</h1>
-      <p class="page-subtitle">Semana 1 · Fecha: (coloca fecha)</p>
+      <h1 class="page-title">Tarea 5 — Título de la actividad</h1>
+      <p class="page-subtitle">Semana 5 · Fecha: (coloca fecha)</p>
     </section>
 
     <!-- DESCRIPCIÓN -->
@@ -53,17 +53,17 @@
 
       <div class="gallery">
         <figure class="figure">
-          <img src="../assets/img/cover-t1.jpg" alt="Imagen 1 de la Tarea 1" />
+          <img src="../assets/img/cover-t5.jpg" alt="Imagen 1 de la Tarea 5" />
           <figcaption>Imagen 1: breve descripción.</figcaption>
         </figure>
 
         <figure class="figure">
-          <img src="../assets/img/cover-t1.jpg" alt="Imagen 2 de la Tarea 1" />
+          <img src="../assets/img/cover-t5.jpg" alt="Imagen 2 de la Tarea 5" />
           <figcaption>Imagen 2: breve descripción.</figcaption>
         </figure>
 
         <figure class="figure">
-          <img src="../assets/img/cover-t1.jpg" alt="Imagen 3 de la Tarea 1" />
+          <img src="../assets/img/cover-t5.jpg" alt="Imagen 3 de la Tarea 5" />
           <figcaption>Imagen 3: breve descripción.</figcaption>
         </figure>
       </div>
@@ -75,8 +75,8 @@
 
       <div class="video">
         <video controls preload="metadata">
-          <source src="../assets/video/t1-demo.webm" type="video/webm" />
-          <source src="../assets/video/t1-demo.mp4" type="video/mp4" />
+          <source src="../assets/video/t5-demo.webm" type="video/webm" />
+          <source src="../assets/video/t5-demo.mp4" type="video/mp4" />
           Tu navegador no soporta la reproducción de video.
         </video>
       </div>
@@ -108,7 +108,7 @@
     <section class="section">
       <div class="hero-actions">
         <a class="btn" href="../index.html#tareas">← Volver a tareas</a>
-        <a class="btn btn-primary" href="tarea-02.html">Siguiente tarea →</a>
+        <a class="btn btn-primary" href="tarea-06.html">Siguiente tarea →</a>
       </div>
     </section>
 
@@ -116,7 +116,7 @@
 
   <footer class="footer">
     <div class="container">
-      <strong>TU NOMBRE</strong> · Tarea 1 · Pensamiento de Ingeniería · Universidad Iberoamericana
+      <strong>TU NOMBRE</strong> · Tarea 5 · Pensamiento de Ingeniería · Universidad Iberoamericana
     </div>
   </footer>
 </body>
